--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@types/howler": "^2.2.12",
         "@types/node": "^22.13.5",
         "@vue/eslint-config-typescript": "^14.3.0",
         "eslint": "^9.17.0",
@@ -31,6 +32,7 @@
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
         "embla-carousel-vue": "^8.6.0",
+        "howler": "^2.2.4",
         "laravel-vite-plugin": "^1.0",
         "lucide-vue-next": "^0.468.0",
         "reka-ui": "^2.3.1",
