--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "typescript": "^5.2.2",
         "vite": "^6.2.0",
         "vue": "^3.5.13",
+        "vue-sonner": "^2.0.1",
         "ziggy-js": "^2.4.2"
     },
     "optionalDependencies": {
